--- a/styles.scss
+++ b/styles.scss
@@ -1,89 +1,293 @@
-@charset "UTF-8";
-
+@import "reset.scss";
 @font-face {
   font-family: myfont;
-  src: url(HELVET1.ttf);
+  src: url(FuturaExtended.ttf);
 }
-@font-face {
+
+/*@font-face {
   font-family: myfontexto;
   scr: url(HELVETICA.otf);
-}
+}*/
+
 @font-face {
   font-family: myfontlt;
-  src: url(HelveticaNeueLTStdLt.otf);
+  src: url(futura-normal.ttf);
 }
-header{
-  background-color: #FFF;
-  opacity: 0.1;
-  position: fixed;
-  top:0;
+body{
+  margin: 0 0%;
+}
+header {
+  background-color: rgb(255, 255, 255);
+  opacity: 0.5;
+  /*position: fixed;
+  top: 0;*/
   width: 100%;
   height: 50px;
 }
-header .indice{
+
+header .indice {
   text-align: right;
   margin-top: 20px;
   padding-right: 50px;
 }
-.indice{
-  font-family:"myfontlt",arial,sans-serif;
+
+.indice {
+  font-family: "myfont",arial,sans-serif;
+  font-weight: bold;
   font-size: 12pt;
-  color:rgb(0, 1, 0);
-  margin-top:0px;
+  color: #000;
+  margin-top: 0px;
   word-spacing: 40px;
-}
-.indice li{
-  display: inline;
-}
-a:visited{
-  color:rgb(0, 1, 0);
-}
-a:hover{
-  color:#acacac;
-}
-a:active {
-  color:black;
+  z-index: 2;
 }
 
-h1{
-  color:#000;
-  font-family:"myfont",arial,sans-serif;
+.indice li {
+  display: inline;
+}
+a.link{
+  color:rgb(0, 33, 255);
+}
+a:visited {
+  color:rgb(0, 33, 255);
+}
+
+a:hover {
+  color:rgba(0, 0, 0, 0.57);
+}
+
+h1 {
+  color: #000;
+  font-family: "myfontlt",arial,sans-serif;
   font-weight: bold;
-  font-size:50pt;
+  font-size: 50pt;
   text-transform: uppercase;
-  padding-top: 220px;
+  padding-top: 100px;
+
   text-align: center;
 }
-h2{
-  font-family:"myfontlt",arial,sans-serif;
-  color: lightgrey;
+
+h2 {
+  font-family: "myfontlt",arial,sans-serif;
+  color: rgba(0, 0, 0, 0.57);
   font-size: 20pt;
   text-align: center;
-  margin-top: -40px;
+  margin-top: 0px;
+  padding-bottom: 40px;
 }
-.inicio{
-  background-color:rgb(218, 236, 255);
+.inicio {
   padding-top: 50px;
   padding-bottom: 170px;
 }
-img{
-  display:block;
-  flex-direction: column;
-    margin: auto;
-    width: 40%;
-    padding-top: 10px;
+.primeiro {
+  background-color:rgb(255, 255, 255);
+  margin:0%;
+  padding-bottom:0px;
+  height: 548px;
+  display: flex;
+  justify-content: space-between;
 }
-.aboutme{
-  padding-bottom: 20px;
+.foto {
+  margin:0 0%;
+  width: 548px;
+  height: 548px;
+}
+.topicos{
+  position: relative;
+  top:0px;
+  left: 50px;
+  font-family: "myfontlt",arial,sans-serif;
+  font-weight: bold;
+  font-size: 30pt;
+  text-transform: none;
+  padding-top: 50px;
+}
+.texto {  /*texto aboutme*/
+  font-family: "myfontlt",arial,sans-serif;
+  font-weight: bold;
+  font-size: 15pt;
+  color:rgba(0, 0, 0, 0.53);
+  padding-top: 170px;
+  padding-right: 150px;
 }
 
-.texto{/*texto aboutme*/
-  font-family:"myfontexto",arial,sans-serif;
-  position: relative;
-  top: 0px;
-  left: 100px;
+.segundo {
+  text-align: center;
+  padding-top:0px;
 }
-p{
-text-align: justify;
-margin:20%;
+.grupoelementos{
+  z-index: 1;
+  padding:0px;
+  margin: 0px;
+}
+.grupoelementos li {
+  font-family: "myfontlt",arial,sans-serif;
+  text-transform: uppercase;
+  width: 49%;/*tamanho das imagens*/
+  display: inline-block;
+}
+.grupoelementos ul{
+padding: 0px;
+}
+.grupoelementos img {
+  /*margin-left:-18px;/*..........alinhado :(..........*/
+  width: 100%;
+  padding:0px;/*........imagens juntas em cima*/
+  margin:0px;
+}
+img{
+  height: 300px;/* altura das imagens.... que vao ser frases sobre uma imagem...*/
+}
+figure {
+  position: relative;
+  margin:-11px;/*imagens todas juntas*/
+}
+/*figcaption {
+  display: none;
+}
+
+.terceiro {
+  margin-top: 200px;
+  margin-bottom: 180px;
+  padding-top: 100px;
+  position: relative;
+  left: 0px;
+}
+
+.terceiro p {
+  font-family: "myfontlt",arial,sans-serif;
+  display: inline;
+}
+
+.terceiro p:first-child {
+  font-size: 15pt;
+  text-transform: uppercase;
+  padding-bottom: 20px;
+  color: #0000ff;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+}
+
+.terceiro p:nth-child(2) {
+  color: #000;
+  display: block;
+  position: absolute;
+  top: 30px;
+  left: 0px;
+}*/
+
+h3 {
+  font-family: "myfontlt",arial,sans-serif;
+  text-transform: uppercase;
+  font-size: 20pt;
+  color: #0000ff;
+  position: absolute;
+  top: 140px;
+  left: 575px;
+}
+
+.logos{
+  display: flex;
+  justify-content: space-around;
+  margin-top:70px;
+  margin-bottom: 60px;
+}
+.behance{
+  width: 50px;
+  height: 50px;
+}
+.email{
+  width: 50px;
+  height: 50px;
+}
+.pinterest{
+  width: 50px;
+  height: 50px;
+}
+.vimeo{
+  width: 47px;
+  height: 47px;
+}
+.email{
+  font-family: "myfontlt",arial,sans-serif;
+  color: rgb(255, 255, 255);
+  font-weight: bold;
+  font-size: 20pt;
+  background-color: rgb(0, 56, 255);
+  width: 1343px;
+  height: 50px;
+  padding-top: 25px;
+  text-align: center;
+
+
+}
+
+
+@media (max-width: 768px) {
+  header {
+    /*background-color: #0000ff;*/
+    padding-top: 150px;
+    padding-bottom: 320px;
+  }
+  header .indice {
+    display: none;
+  }
+  h1 {
+    font-size: 45pt;
+    margin-top: 0;
+    margin-left: -300px;
+  }
+  .texto {
+    padding-top: 0px;
+    margin-top: -160px;
+    margin-left: 54%;
+  }
+  .segundo {
+    width: 100%;
+    margin-top: -200px;
+    padding-top: 0px;
+    padding-bottom: 80px;
+  }
+  .trabalhosum li {
+    width: 30%;
+    display: inline-block;
+  }
+  .terceiro {
+    margin-top: 0;
+    margin-left: 200px;
+  }
+  .terceiro p:first-child {
+    font-size: 11pt;
+    padding-bottom: 20px;
+    position: absolute;
+    top: 0px;
+    left: 140px;
+  }
+  .terceiro p:nth-child(2) {
+    font-size: 9pt;
+    position: absolute;
+    top: 20px;
+    left: 90px;
+  }
+  h3 {
+    font-size: 12pt;
+    position: absolute;
+    top: 60px;
+    left: 120px;
+  }
+  .rsociais {
+    font-family: "myfont",arial,sans-serif;
+    font-size: 9pt;
+    word-spacing: 10px;
+    line-height: normal;
+    position: absolute;
+    top: 100px;
+    left: 80px;
+  }
+  .seta {
+    position: absolute;
+    top: 1700px;
+    left: 45%;
+    padding-bottom: 50px;
+  }
 }
